--- a/debian/rules
+++ b/debian/rules
@@ -128,6 +128,12 @@ ifneq (,$(filter $(DEB_HOST_ARCH), x32))
 	confflags += -Dasm=false
 endif
 
+# Remove traling , if any
+DRI_DRIVERS := $(shell echo $(DRI_DRIVERS) | sed "s/,$$//")
+VULKAN_DRIVERS := $(shell echo $(VULKAN_DRIVERS) | sed "s/,$$//")
+EGL_PLATFORMS := $(shell echo $(EGL_PLATFORMS) | sed "s/,$$//")
+GALLIUM_DRIVERS := $(shell echo $(GALLIUM_DRIVERS) | sed "s/,$$//")
+
 confflags_EGL = -Dplatforms="$(EGL_PLATFORMS)"
 confflags_GLES = -Dgles1=false -Dgles2=true
 confflags_GALLIUM += -Dgallium-drivers="$(GALLIUM_DRIVERS)"
