--- a/debian/rules
+++ b/debian/rules
@@ -49,7 +49,7 @@ else
 	confflags_DRI3 = -Ddri3=true
 	DRI_DRIVERS += nouveau,
 	# Gallium drivers which require kernel support, not yet ported to non-Linux
-	GALLIUM_DRIVERS += nouveau, virgl,
+	GALLIUM_DRIVERS += virgl,
 
 	# Freedreno requires arm in addition
 	ifneq (,$(filter arm arm64,$(DEB_HOST_ARCH_CPU)))
@@ -58,7 +58,7 @@ else
 
 	# etnaviv, kmsro, tegra, vc4 and v3d kernel support are only available on armhf and arm64
 	ifneq (,$(filter $(DEB_HOST_ARCH), armhf arm64))
-		GALLIUM_DRIVERS += etnaviv, kmsro, lima, panfrost, tegra, vc4, v3d,
+		GALLIUM_DRIVERS += etnaviv, kmsro, lima, panfrost, vc4, v3d,
 	endif
 
 	ifneq (,$(filter $(DEB_HOST_ARCH), amd64 i386 x32))
