--- a/debian/control
+++ b/debian/control
@@ -32,6 +32,7 @@ Build-Depends:
  libxcb-present-dev,
  libxcb-randr0-dev,
  libxcb-sync-dev,
+ libxcb-shm0-dev,
  libxrandr-dev,
  libxshmfence-dev (>= 1.1),
  python3,
